--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Ross Nomann <rossnomann@protonmail.com>"]
 dotenv = "0.12.0"
 futures = "0.1"
 regex = "1.0"
-telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "a2db63764dc7bb590104c0ea7b38f0b6191c7d0a" }
+telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "a2db63764dc7bb590104c0ea7b38f0b6191c7d0a", features = ["curl_connector"] }
 tokio-core = "0.1"
