--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,5 @@ authors = ["Ross Nomann <rossnomann@protonmail.com>"]
 
 [dependencies]
 dotenv = "0.12"
-futures-await = "0.1"
-futures-retry = "0.1"
 regex = "1.0"
-telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "a2db63764dc7bb590104c0ea7b38f0b6191c7d0a", features = ["curl_connector"] }
-tokio-core = "0.1"
+teleborg = "0.1"
