--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "teletext"
 version = "0.1.3"
 authors = ["Ross Nomann <rossnomann@protonmail.com>"]
+edition = "2018"
 
 [dependencies]
 dotenv = "0.13.0"
